--- a/downloadData.json.example
+++ b/downloadData.json.example
@@ -1,9 +1,9 @@
 {
   "hasKey": true,
-  "limit": 50,
+  "limit": 10,
   "downloadData": [
     {
-      "url": "",
+      "url": ".m3u8",
       "name": ""
     }
   ]
