--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "path": "^0.12.7",
     "progress": "^2.0.3",
     "stream": "^0.0.2",
+    "tsconfig-paths": "^4.2.0",
     "url": "^0.11.3"
   },
   "devDependencies": {
