--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "path": "^0.12.7",
     "progress": "^2.0.3",
     "stream": "^0.0.2",
-    "tsconfig-paths": "^4.2.0",
     "url": "^0.11.3"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.22",
-    "@types/progress": "^2.0.5"
+    "@types/progress": "^2.0.5",
+    "tsconfig-paths": "^4.2.0"
   }
 }
